# TinyLEGO

./: .gitignore  CMakeLists.txt  README.md  cmake-clean.sh  cmake-debug.sh  cmake-release.sh  cmake-xcode.sh
libs/Miracl/: big.cpp  big.h  linux64  miracl.h  zzn.cpp  zzn.h
libs/OTExtension/ot/: alsz-ot-ext-rec.cpp  alsz-ot-ext-rec.h  alsz-ot-ext-snd.cpp  alsz-ot-ext-snd.h  ot-ext-snd.cpp  ot-ext.h
libs/OTExtension/util/: cbitvector.cpp  channel.h  constants.h  rcvthread.h  sndthread.h  socket.h
libs/OTExtension/util/crypto/: crypto.cpp  ecc-pk-crypto.h  intrin_sequential_enc8.cpp
src/: CMakeLists.txt
src/circuit/: circuit-parser.cpp  circuit.h
src/commit/: bch.c  bch.h  commit-scheme-rec.cpp  commit-scheme-rec.h  commit-scheme-snd.cpp  commit-scheme-snd.h  commit-scheme.cpp  commit-scheme.h  ecc.cpp  ecc.h
src/dot/: alsz-dot-ext-rec.cpp  alsz-dot-ext-rec.h  alsz-dot-ext-snd.cpp  alsz-dot-ext-snd.h  alsz-dot-ext.cpp  alsz-dot-ext.h
src/garbling/: auths.h  garbling-handler.cpp  garbling-handler.h  halfgates.h
src/mains/: commit-rec-main.cpp  commit-snd-main.cpp  mains.h  tiny-const-main.cpp  tiny-eval-main.cpp
src/prg/: aes-ni.cpp  aes.h  random.cpp  random.h
src/tiny/: params.cpp  params.h  tiny-constructor.cpp  tiny-constructor.h  tiny-evaluator.cpp  tiny-evaluator.h  tiny.cpp  tiny.h
src/tiny-mains/: tiny-const-main.cpp  tiny-eval-main.cpp
src/tiny-util/: channel.cpp  channel.h  global-constants.h  network.cpp  typedefs.h  util.h
src/util/: channel.cpp  channel.h  global-constants.h  network.cpp  network.h  util.h
test/: CMakeLists.txt  test-all.sh  test-circuit-parser.cpp  test-commitment.cpp  test-dot-and-commit.cpp  test-dot.cpp  test-tiny.cpp  test.h
timing_scripts/: aws_lan_const_single.sh  aws_lan_const_timings.sh  aws_lan_eval_single.sh  aws_lan_eval_timings.sh  aws_wan_const_single.sh  aws_wan_const_timings.sh  aws_wan_eval_single.sh  aws_wan_eval_timings.sh  local_const_commit_timings.sh  local_const_timings.sh  local_eval_commit_timings.sh  local_eval_timings.sh  set_iters.sh
